--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
+    "concurrently": "^4.1.1",
     "config": "^3.2.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-router": "0.0.1",
     "mongoose": "^5.6.9"
   }
 }
