--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
-    "mongoose": "^5.6.9"
+    "mongoose": "^5.6.9",
+    "nodemon": "^1.19.1"
   }
 }
